# shine

./: .gitignore  LICENSE.md  README.md  main.py  pyproject.toml  requirements.txt  shine.py
src/: main.py  shine.py
