[tool.poetry]
name = "shine"
version = "1.2.0"
description = "a tool for helping you do tags and prep on nationstates.net more efficiently"
authors = ["sweeze <sw33ze@protonmail.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
requests-html = "^0.10.0"
rtoml = "^0.8.0"
keyboard = "^0.13.5"
tendo = "^0.2.15"

[tool.poetry.dev-dependencies]
pyinstaller = "^5.1"
black = "^22.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
